# TestSelector

./: README.md  TestSelector.cabal  TestSelector.lkshw
cpp/: .gitignore  CMakeLists.txt
cpp/buildsystem/: compiler_support.cmake
cpp/executor/: CMakeLists.txt
cpp/production/: CMakeLists.txt
cpp/production/include/: basic_lua_helpers.h  configurator.h  coverage_database.h  coverage_gathering_strategy.h  coverage_generator.h  factory.h  function.h  lua_engine.h  result_converter.h  result_converter_factory.h  result_count.h  test_execution_strategy.h  test_runner.h  testcase_chooser.h  testcase_observer.h  ts_assert.h  type_specializations.h  variable.h  variable_operators.h  variadic_to_mpl.h
cpp/production/include/lua_engine/: basic_lua_helpers.h  cfunction.h  configuration.h  engine.h  entity.h  function.h  lua_engine.h  lua_exceptions.h  lua_state_default_deleter.h  metatable.h  module.h  pushable.h  table.h  type_specializations.h  variable.h  variable_operators.h  variable_proxy.h
cpp/production/include/metaprogramming/: are_unique.hpp  variadic_to_mpl.h
cpp/production/include/shop/: .component.h.swp  \  component.h
cpp/production/include/threading/: .threadsafe_queue.h.swp  active_object.h  actor.h  dispatcher.h  multithreaded_logger.h  queue.h  thread_pool.h  threadsafe_queue.h  threadsafe_wrapper.hpp
cpp/production/libs/: CMakeLists.txt
cpp/production/libs/Lua/: CMakeLists.txt  lua.c  luac.c
cpp/production/libs/PugiXML/: CMakeLists.txt  pugixml.cpp
cpp/production/src/: basic_lua_helpers.cpp  configurator.cpp  coverage_database.cpp  coverage_gathering_strategy.cpp  coverage_generator.cpp  function.cpp  lua_engine.cpp  test_execution_strategy.cpp  test_runner.cpp  testcase_chooser.cpp  type_specializations.cpp  variable.cpp
cpp/production/src/lua_engine/: basic_lua_helpers.cpp  engine.cpp  entity.cpp  function.cpp  lua_engine.cpp  metatable.cpp  table.cpp  variable_proxy.cpp
cpp/production/src/shop/: component.cpp
cpp/production/src/threading/: active_object.cpp  actor.cpp  multithreaded_logger.cpp  thread_pool.cpp
cpp/tests/: CMakeLists.txt
cpp/tests/files/: basic_configuration.lua
cpp/tests/files/example_computer_data/: boxes.txt  graphics.txt  motherboards.txt  power_suppliers.txt  processors.txt
cpp/tests/helpers/: main.cpp
cpp/tests/testcases/: actor_sanity.cpp  factory.cpp  lua_sanity.cpp  sanity_checks.cpp  testrunner_tests.cpp  threading_blocks.cpp
src/: Dynamic.hs  DynamicSolving.hs  DynamicSolvingTests.hs  Gradeable.hs  Main.hs  ParetoSearch.hs  Test.hs  caller.lua  listing.lua  per_testcase.lua  suspensions.lua
