CMAKE_MINIMUM_REQUIRED(VERSION 2.8)
PROJECT (TestSelector)

SET(ROOT_DIR ${CMAKE_SOURCE_DIR})

SET(CMAKE_BINARY_DIR ${CMAKE_SOURCE_DIR}/bin)
SET( TS_INSTALL_INCLUDE_DIR include/ )
SET( TS_INSTALL_LIB_DIR ${CMAKE_BINARY_DIR}/lib )
SET( TS_INSTALL_CONTRIB_DIR contrib/ )
SET( TS_INSTALL_EXAMPLE_DIR examples/ )
SET( TS_INSTALL_DOC_DIR doc/ )


SET(CMAKE_LIBRARY_OUTPUT_DIRECTORY  ${CMAKE_BINARY_DIR}/lib)
SET(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/exe)

SET(Boost_USE_STATIC_LIBS ON)
FIND_PACKAGE(Boost 1.55.0 REQUIRED COMPONENTS filesystem unit_test_framework)

ADD_SUBDIRECTORY(executor)
ADD_SUBDIRECTORY(production)
ADD_SUBDIRECTORY(tests)

ADD_DEPENDENCIES(Executor TestSelector)
ADD_DEPENDENCIES(Tester TestSelector)
ADD_DEPENDENCIES(TestSelector PugiXML)