CMAKE_MINIMUM_REQUIRED(VERSION 2.8.1)
CMAKE_POLICY(VERSION 2.8.1)

PROJECT(Executor)

SET(EXECUTOR_DIR ${ROOT_DIR}/executor)

FILE (GLOB HEADERS ${EXECUTOR_DIR}/include/*.h)
FILE (GLOB SOURCES ${EXECUTOR_DIR}/src/*.cpp)

SET(EXECUTOR_INCLUDE_DIRS include/*.h)

INCLUDE_DIRECTORIES(${Boost_INCLUDE_DIRS})
INCLUDE_DIRECTORIES(${PUGIXML_INCLUDE_DIR})
INCLUDE_DIRECTORIES(${PRODUCTION_INCLUDE_DIR}})
INCLUDE_DIRECTORIES(${EXECUTOR_INCLUDE_DIRS})

LINK_DIRECTORIES(${Boost_LIBRARY_DIRS})

ADD_EXECUTABLE(Executor ${SOURCES})
TARGET_LINK_LIBRARIES(Executor TestSelector ${Boost_Libraries})