CMAKE_MINIMUM_REQUIRED(VERSION 2.8.1)
CMAKE_POLICY(VERSION 2.8.1)

PROJECT(TestSelector)

SET(PRODUCTION_DIR ${ROOT_DIR}/production)

FILE (GLOB HEADERS ${PRODUCTION_DIR}/include/*.h)
FILE (GLOB SOURCES ${PRODUCTION_DIR}/src/*.cpp)

INCLUDE_DIRECTORIES(${Boost_INCLUDE_DIRS})
INCLUDE_DIRECTORIES(${PRODUCTION_INCLUDE_DIR})
INCLUDE_DIRECTORIES(${PUGIXML_INCLUDE_DIR})

LINK_DIRECTORIES(${Boost_LIBRARY_DIRS})

ADD_SUBDIRECTORY(libs)

ADD_LIBRARY(TestSelector ${SOURCES} ${HEADERS})
