CMAKE_MINIMUM_REQUIRED(VERSION 2.8.1)
CMAKE_POLICY(VERSION 2.8.1)

PROJECT(TestSelector)

SET(PRODUCTION_DIR ${ROOT_DIR}/production)
SET(PRODUCTION_INCLUDE_DIR ${PRODUCTION_DIR}/include)
SET(PRODUCTION_INCLUDE_DIR ${PRODUCTION_DIR}/include PARENT_SCOPE)

ADD_SUBDIRECTORY(libs)
MESSAGE("-- Production code directory: " ${PRODUCTION_DIR})

SET(PUGIXML_INCLUDE_DIR ${PUGIXML_INCLUDE_DIR} PARENT_SCOPE)
SET(LUA_INCLUDE_DIR ${LUA_INCLUDE_DIR} PARENT_SCOPE)

FILE (GLOB HEADERS ${PRODUCTION_INCLUDE_DIR}/*.h)

FILE (GLOB SOURCES ${PRODUCTION_DIR}/src/*.cpp
    ${PRODUCTION_DIR}/src/*/*.cpp)

INCLUDE_DIRECTORIES(${Boost_INCLUDE_DIRS})
INCLUDE_DIRECTORIES(${PRODUCTION_INCLUDE_DIR})
INCLUDE_DIRECTORIES(${PUGIXML_INCLUDE_DIR})
INCLUDE_DIRECTORIES(${LUA_INCLUDE_DIR})

LINK_DIRECTORIES(${Boost_LIBRARY_DIRS})

ADD_LIBRARY(TestSelector ${SOURCES} ${HEADERS})
