CMAKE_MINIMUM_REQUIRED(VERSION 2.8.1)
CMAKE_POLICY(VERSION 2.8.1)

PROJECT(Tester)

SET(TEST_DIR ${ROOT_DIR}/tests)
SET(TEST_FRAMEWORK_INCLUDE_DIRS ${TEST_DIR}/doubles/*.h ${TEST_DIR}/helpers/*.h)

FILE (GLOB HEADERS ${TEST_DIR}/*/*.hpp)
FILE (GLOB SOURCES ${TEST_DIR}/testcases/*.cpp ${TEST_DIR}/helpers/*.cpp ${TEST_DIR}/doubles/*.cpp)


INCLUDE_DIRECTORIES(${Boost_INCLUDE_DIRS})
INCLUDE_DIRECTORIES(${PUGIXML_INCLUDE_DIR})
INCLUDE_DIRECTORIES(${PRODUCTION_INCLUDE_DIR}})
INCLUDE_DIRECTORIES(${TEST_FRAMEWORK_INCLUDE_DIRS})

IF(NOT DEFINED TURTLE_ROOT)
    SET(TURTLE_ROOT $ENV{TURTLE_ROOT})
ENDIF()

IF(NOT DEFINED TURTLE_ROOT)
  MESSAGE(FATAL_ERROR "Could not find TURTLE_ROOT."
  "You need to set TURTLE_ROOT environment variable to path where Turtle Mock is installed. "
  "Turtle Mock can be downloaded for free from http://turtle.sourceforge.net/") 
ENDIF()
MESSAGE("Found Turtle Mock in: " ${TURTLE_ROOT})

INCLUDE_DIRECTORIES(${TURTLE_ROOT})

LINK_DIRECTORIES(${Boost_LIBRARY_DIRS})

ADD_EXECUTABLE(Tester ${SOURCES})
TARGET_LINK_LIBRARIES(Tester TestSelector PugiXML ${Boost_Libraries})

if ( MSVC )
    ADD_CUSTOM_COMMAND(TARGET Tester
        POST_BUILD
        COMMAND ${CMAKE_RUNTIME_OUTPUT_DIRECTORY}/Debug/Tester${CMAKE_EXECUTABLE_SUFFIX} ARGS "--report-level=short"
        COMMENT "=== Running tests ===")
endif ( MSVC )