CMAKE_MINIMUM_REQUIRED(VERSION 2.8.1)
CMAKE_POLICY(VERSION 2.8.1)

PROJECT(LIBRARIES)

SET(LIBRARIES_BASE_DIR ${PRODUCTION_DIR}/libs)


ADD_SUBDIRECTORY(Lua)
IF (${LUA_INCLUDE_DIR} EQUAL "")
    MESSAGE(FATAL_ERROR "LUA_INCLUDE_DIR shall be set by cmake files in lua code")
ENDIF(${LUA_INCLUDE_DIR} EQUAL "")
SET(LUA_INCLUDE_DIR ${LUA_INCLUDE_DIR} PARENT_SCOPE)


ADD_SUBDIRECTORY(PugiXML)
IF (${PUGIXML_INCLUDE_DIR} EQUAL "")
    MESSAGE(FATAL_ERROR "PUGIXML_INCLUDE_DIR shall be set by cmake files in pugixml code")
ENDIF(${PUGIXML_INCLUDE_DIR} EQUAL "")
SET(PUGIXML_INCLUDE_DIR ${PUGIXML_INCLUDE_DIR} PARENT_SCOPE)