CMAKE_MINIMUM_REQUIRED(VERSION 2.8.1)
CMAKE_POLICY(VERSION 2.8.1)

PROJECT(PugiXML)

SET(PUGIXML_DIR ${LIBRARIES_BASE_DIR}/PugiXML)
SET(PUGIXML_INCLUDE_DIR ${LIBRARIES_BASE_DIR}/PugiXML PARENT_SCOPE)

FILE (GLOB SOURCES ${PUGIXML_DIR}/*.cpp)
FILE (GLOB HEADERS ${PUGIXML_DIR}/*.hpp)

ADD_LIBRARY(PugiXML ${SOURCES} ${HEADERS})